# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build libfence.so {{{
config("fence_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("fence_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("libfence") {
  sources = [ "src/fence.cpp" ]

  configs = [ ":fence_config" ]

  public_configs = [ ":fence_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
  ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Build libfence.so }}}

group("test") {
  testonly = true

  deps = [ "test:test" ]
}
